# macos

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml  remote.toml
infra/cli/: README.md  pyproject.toml
infra/cli/benchmark/: agent.py  agent_yutori.py  backend.py  config.py  dispatch_yutori.py  grading.py  log.py  runner.py  task.py  worlds.py
infra/cli/benchmark/env/: __init__.py  base.py  pkg.py  use_computer.py
infra/cli/benchmark/env/kvm/: host.py  (+6 more)
infra/cli/env-build/: apps.recipe.sh  freeze-layer.sh  vz-freeze-layer.sh
infra/cli/envs/cua-macos-textedit/: build-index.sh  env.toml
infra/cli/envs/macos-cua-marker/: env.toml
infra/cli/envs/macos-jq/: env.toml
infra/cli/mw/: __init__.py  auth.py  cli.py  naming.py  push.py  remote.py
infra/cli/tasks/advanced/: 746f816a-b249-4040-a48f-9db983ea683e.json
infra/cli/tasks/apple_suite/: 19b89112-cc11-4d75-aa54-63511c13a426.json  2b13e970-fee7-4940-ae84-0bc47d23ef00.json  496ae7dc-3fc7-475d-9ef3-e9e487c99dc7.json  92acd9b8-ddcc-4de0-abb8-788a0a0d0585.json  96f71b10-180c-4cef-9fc2-4a218f4e8f66.json  d5bbdfda-abc5-4e01-8c91-080ba5f13653.json
infra/cli/tasks/file_management/: 925bdc48-a331-48c2-85f9-dcf82199966d.json  (+1 more)
infra/cli/tests/: conftest.py  test_action_summary.py  test_auth_resolve.py  test_backend_client.py  test_dispatch_yutori.py  test_drive_agent.py  test_env_pkg.py  test_grading.py  test_model_timeout.py  test_observability.py  test_push.py  test_rfb_reconnect.py  test_rfb_vnc_auth.py  test_slot_release.py  test_trials_aggregate.py  test_vz_env.py
(+150 files in other folders)
