[project]
name = "macosworld-usecomputer"
version = "0.1.0"
description = "macOS computer-use benchmark harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "click>=8.0.0",
    "openai>=1.0.0",
    "pillow>=12.2.0",
    "use-computer>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mw = "mw.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark", "mw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
